2009-11-13  Bob Halley  <halley@dnspython.org>

	* dns/entropy.py: Use os.urandom() if present.  Don't seed until
	  someone wants randomness.

2009-09-16  Bob Halley  <halley@dnspython.org>

	* dns/entropy.py: The entropy module needs locking in order to be
	  used safely in a multithreaded environment.  Thanks to Beda Kosata
	  for reporting the problem.

2009-07-27  Bob Halley  <halley@dnspython.org>

	* dns/query.py (xfr): The socket was not set to nonblocking mode.
	  Thanks to Erik Romijn for reporting this problem.

2009-07-23  Bob Halley  <halley@dnspython.org>

	* dns/rdtypes/IN/SRV.py (SRV._cmp): SRV records were compared
	  incorrectly due to a cut-and-paste error.  Thanks to Tommie
	  Gannert for reporting this bug.

	* dns/e164.py (query): The resolver parameter was not used.
	  Thanks to Matías Bellone for reporting this bug.

2009-06-23  Bob Halley  <halley@dnspython.org>

	* dns/entropy.py (EntropyPool.__init__): open /dev/random unbuffered;
	  there's no need to consume more randomness than we need.  Thanks
	  to Brian Wellington for the patch.

2009-06-19  Bob Halley  <halley@dnspython.org>

	* (Version 1.7.1 released)

2009-06-19  Bob Halley  <halley@dnspython.org>

	* DLV.py was omitted from the kit

	* Negative prerequisites were not handled correctly in _get_section().

2009-06-19  Bob Halley  <halley@dnspython.org>

	* (Version 1.7.0 released)

2009-06-19  Bob Halley  <halley@dnspython.org>

	* On Windows, the resolver set the domain incorrectly.  Thanks
	  to Brandon Carpenter for reporting this bug.

        * Added a to_digestable() method to rdata classes; it returns the
	  digestable form (i.e. DNSSEC canonical form) of the rdata.  For
	  most rdata types this is the same uncompressed wire form.  For
	  certain older DNS RR types, however, domain names in the rdata
	  are downcased.

       * Added support for the HIP RR type.

2009-06-18  Bob Halley  <halley@dnspython.org>

       * Added support for the DLV RR type.
